// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders with relevant formStyles 1`] = `
<div>
  <page>
    <view
      style="border: 1px solid red;"
    />
  </page>
</div>
`;

exports[`renders without formStyles 1`] = `
<div>
  <page>
    <view />
  </page>
</div>
`;
